  * Made the Real demuxer recognise http references.
  * Require correct URL encoding of '#'s which aren't separators.
  * Don't decode %nn in raw filenames. [Bug 1784272]
  * Always enable a52dec capabilities for external a52dec, this makes it
    possible to use the DJB accelerated FFT when using the external a52dec
    liba52 library.

xine-lib (1.1.8)
  * Send a channel-changed event to the frontend when receiving the SYNC
    string from last.fm streaming server.
  * Disable mediaLib support by default (the licenses probably disallow the
    distribution of xine binaries built against mediaLib, and on non-VIS
    capable boxes it's probably worse than our own code).
  * Rename endianness-reading macros so that they don't collide with Solaris
    system macros. BE_/LE_ are now _X_BE_ and _X_LE_.
  * Add an extra function to allow front ends to rename their old,
    badly-named configuration items.
  * Various build fixes and cleanups for Solaris, plugin dependencies etc.
  * Fix some memory leaks in the Vorbis decoder and video overlays.
  * Fix a problem with the goom plugin which could cause it to stop working.
  * Clean up "%" unescaping in MRLs; correctly handle "%" in DVD and VCD MRLs.
  * Fix a crash with "dvb:/".
  * DVB subtitle fixes: deadlock prevention, thread leakage, spec compliance.
  * Allow the DVB input plugin to timeout if it is receiving no signal.
  * Fix an audio resampling problem which was causing regular clicking.
  * Fix build with recent glibc and a debugging #define. [Bug 1773769]
  * Fix handling of multiple MPEG TS audio streams & subtitle languages.
  * Add colouring for bold & italic in text subtitles.
  * Simple scaling of subtitles to fit the frame width (intended to cope
    with common DVB resolutions such as 544x576).
  * Various small video frame-handling bug fixes.
  * Add options to control bob deinterlacing in the XxMC video output plugin.

xine-lib (1.1.7)